
[package]
name = "fader"
version = "0.1.0"
authors = ["Per Lindgren <per.lindgren@ltu.se>"]
edition = "2018"

[dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6"
stm32f1xx-hal = { version = "0.3", features = ["rt"] }
panic-semihosting = "0.5"
usb-device = "0.2.1"
usbd-serial = "0.1"
stm32-usbd = { version = "0.3.0", features = ["stm32f103xx"] }
nb = "0.1.2"

[dev-dependencies]
cortex-m-rtfm = "0.4.0"
panic-semihosting = "0.5.1"

[profile.release]
incremental = false # disable incremental build to allow lto on nightly
codegen-units = 1   # better optimizations
debug = true        # symbols are nice and they don't increase the size on Flash
lto = true          # better optimizations
